Fix some issues hidden by unified build https://bugs.webkit.org/show_bug.cgi?id=224457

Reviewed by Eric Carlson.

Some small fixes and clean-up. The issues are hidden by the unified build mechanism
and were found in a local build.

* DOM/DOMTokenList.mm:
* Plugins/WebPluginController.mm:
* WebCoreSupport/WebFrameLoaderClient.h:
* WebView/WebDataSource.mm:
* WebView/WebFrameView.mm:
* WebView/WebHTMLViewInternal.h:
* WebView/WebImmediateActionController.mm:
* WebView/WebPDFView.mm:


Canonical link: https://commits.webkit.org/236422@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275857 268f45cc-cd09-0410-ab3c-d52691b4dbfc