Source/WebKitLegacy/mac/WebView/WebDataSource.mm
@@ -67,6 +67,7 @@
 #import <wtf/RetainPtr.h>
 #import <wtf/RunLoop.h>
 #import <wtf/URL.h>
+#import <wtf/cocoa/VectorCocoa.h>
 
 #if PLATFORM(IOS_FAMILY)
 #import "WebPDFViewIOS.h"
